# AwesomeCLIP

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
.claude/: launch.json
backend/: cli.py
backend/agent/: director.py  dsl.py  llm.py
backend/api/: server.py
backend/config/: __init__.py  roi_1080p.yaml  roi_1440p.yaml  settings.yaml
backend/pipeline/: align.py  beat.py  calibrate.py  detector.py  effects.py  export_dataset.py  ffmpeg_utils.py  ingest.py  project.py  render.py  review.py  scorer.py  semantic.py  verify.py
backend/schemas/: models.py
docs/: P3.md
final_montage/: beats.json  edl.json  events.json  scorecards.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/editor/: editor.tsx  header.tsx
frontend/src/components/editor/right-panel/: right-panel.tsx
frontend/src/components/editor/timeline/: ruler.tsx
frontend/src/components/editor/vmontage/: backend-export.tsx  chat-panel.tsx  evidence-panel.tsx  save-edl-button.tsx
frontend/src/components/ui/: toggle-group.tsx
frontend/src/lib/: vmontage.ts
frontend/src/stores/: vmontage-store.ts
tests/: conftest.py  test_agent_dsl.py  test_align.py  test_api.py  test_detector_synthetic.py  test_e2e_render.py  test_semantic_scorer.py  test_tonight_features.py
