[project]
name = "vmontage"
version = "0.1.0"
description = "Valorant 高光集锦工具 — 自动检测高光并按 BGM 拍点剪辑成片"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "librosa>=0.10",
    "numpy>=1.26",
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.32",
]

[project.scripts]
vmontage = "backend.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
